<resources>
    <string name="app_name">Registro Docente</string>
    <string name="app_name_full">Registro del docente</string>
    <string name="app_email">lampac@gmail.com</string>

    <string name="action_periodos">Periodos</string>
    <string name="action_clases">Clases</string>

    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Clave</string>
    <string name="prompt_password_new">Nueva clave</string>
    <string name="prompt_password_confirm">Confirmar clave</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_registrar">Registrar</string>
    <string name="action_recuperar">Recuperar</string>
    <string name="action_cambiar">Cambiar</string>

    <string name="error_invalid_user">Usuario no válido</string>
    <string name="error_invalid_email">Email no válido</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_invalid_confirm_password">La contraseña no coincide</string>
    <string name="error_incorrect_password">Credenciales incorrectas</string>
    <string name="error_field_required">Entrada requerida</string>

    <string name="msg_bloque_controles_notas">Se ha bloqueado algunos controles, porque ya ha ingresado notas.</string>
    <string name="msg_dia_no_calendario">Este día no está registrdo en el calendario académico</string>
    <string name="msg_dia_feridado">Este día está registrdo como feriado en el calendario académico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_notas">MainNotasNav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_cambiar_clave">Cambiar contraseña</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_edit_parcial">Editar parcial</string>
    <string name="title_activity_settings">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_seguridad">Seguridad</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>
    <string name="pref_title_new_message_notifications">Notificar nuevos mensajes</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silencio</string>
    <string name="pref_title_vibrate">Vibrar</string>

</resources>
